--- a/Resources/Maps/bagel.yml
+++ b/Resources/Maps/bagel.yml
@@ -6400,18 +6400,21 @@ entities:
             1: 136
           2,-4:
             1: 4369
-            0: 52228
+            0: 4
+            2: 52224
           2,-5:
             1: 4352
             0: 58379
           2,-3:
             1: 33825
-            0: 140
+            2: 140
           3,-4:
-            0: 65419
+            0: 52363
+            2: 13056
           3,-3:
-            0: 35007
+            2: 51
             1: 12288
+            0: 34956
           3,-1:
             1: 8739
             0: 34952
@@ -6739,10 +6742,10 @@ entities:
             0: 56797
           5,-8:
             0: 15359
-            2: 32768
+            3: 32768
           5,-7:
             0: 61491
-            2: 136
+            3: 136
           5,-6:
             0: 65535
           5,-5:
@@ -6753,9 +6756,9 @@ entities:
             0: 65311
           6,-8:
             0: 255
-            2: 28672
+            3: 28672
           6,-7:
-            2: 119
+            3: 119
             0: 61952
           6,-6:
             0: 61695
@@ -7979,8 +7982,7 @@ entities:
           9,3:
             0: 49080
           10,4:
-            0: 13107
-            1: 128
+            0: 13115
           10,5:
             0: 65535
           10,6:
@@ -7991,8 +7993,8 @@ entities:
           10,3:
             0: 48059
           11,4:
-            1: 560
-            0: 2184
+            0: 2187
+            1: 512
           11,5:
             0: 32767
           11,6:
@@ -8007,7 +8009,7 @@ entities:
             0: 112
             1: 28672
           17,-7:
-            3: 1
+            4: 1
             1: 4104
           17,-6:
             1: 4593
@@ -8106,17 +8108,17 @@ entities:
           -13,7:
             1: 39312
           -12,8:
-            4: 12
-            5: 3072
+            5: 12
+            7: 3072
           -11,5:
             0: 63351
           -11,6:
             0: 4607
             1: 49152
           -11,8:
-            4: 1
+            5: 1
             1: 17476
-            5: 256
+            7: 256
           -11,7:
             1: 17484
           -10,5:
@@ -8228,7 +8230,7 @@ entities:
           -7,11:
             0: 20206
           -7,12:
-            1: 16385
+            1: 49153
             0: 1228
           -6,9:
             0: 65518
@@ -8344,7 +8346,7 @@ entities:
             1: 35033
             0: 12544
           -12,10:
-            3: 12
+            4: 12
             6: 3072
           -12,11:
             6: 12
@@ -8352,7 +8354,7 @@ entities:
             6: 257
             1: 17476
           -11,10:
-            3: 1
+            4: 1
             6: 256
             1: 17476
           -11,11:
@@ -8410,8 +8412,8 @@ entities:
             1: 15
           -13,12:
             1: 34952
-            5: 48
-            4: 12288
+            7: 48
+            5: 12288
           -12,13:
             1: 61455
           -13,13:
@@ -8507,8 +8509,8 @@ entities:
           -14,12:
             0: 1
             1: 8738
-            5: 128
-            4: 32768
+            7: 128
+            5: 32768
           -17,12:
             0: 52232
           -16,13:
@@ -8986,6 +8988,21 @@ entities:
           - 0
           - 0
         - volume: 2500
+          temperature: 293.15
+          moles:
+          - 0
+          - 103.92799
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+        - volume: 2500
           temperature: 235
           moles:
           - 21.824879
@@ -9033,7 +9050,7 @@ entities:
         - volume: 2500
           temperature: 293.15
           moles:
-          - 6666.982
+          - 0
           - 0
           - 0
           - 0
@@ -9048,7 +9065,7 @@ entities:
         - volume: 2500
           temperature: 293.15
           moles:
-          - 0
+          - 6666.982
           - 0
           - 0
           - 0
@@ -101703,11 +101720,6 @@ entities:
     - type: Transform
       pos: 58.5,10.5
       parent: 60
-  - uid: 13196
-    components:
-    - type: Transform
-      pos: 43.5,17.5
-      parent: 60
   - uid: 13197
     components:
     - type: Transform
@@ -101732,6 +101744,11 @@ entities:
     components:
     - type: Transform
       pos: 46.5,18.5
+      parent: 60
+  - uid: 13202
+    components:
+    - type: Transform
+      pos: 43.5,17.5
       parent: 60
   - uid: 13251
     components:
@@ -102355,11 +102372,6 @@ entities:
     components:
     - type: Transform
       pos: -17.5,31.5
-      parent: 60
-  - uid: 15570
-    components:
-    - type: Transform
-      pos: 45.5,17.5
       parent: 60
   - uid: 15581
     components:
@@ -103303,6 +103315,11 @@ entities:
     components:
     - type: Transform
       pos: 22.5,10.5
+      parent: 60
+  - uid: 19408
+    components:
+    - type: Transform
+      pos: 45.5,17.5
       parent: 60
   - uid: 19409
     components:
@@ -108114,7 +108131,7 @@ entities:
       parent: 60
 - proto: LockerQuarterMasterFilled
   entities:
-  - uid: 13202
+  - uid: 15570
     components:
     - type: Transform
       pos: 43.5,16.5
@@ -111983,6 +112000,11 @@ entities:
     - type: Transform
       pos: -41.5,25.5
       parent: 60
+  - uid: 13193
+    components:
+    - type: Transform
+      pos: -11.5,-26.5
+      parent: 60
   - uid: 17268
     components:
     - type: Transform
@@ -112100,14 +112122,6 @@ entities:
     - type: Transform
       pos: 34.5,9.5
       parent: 60
-  - uid: 21187
-    components:
-    - type: Transform
-      pos: -10.5,-26.5
-      parent: 60
-    - type: ContainerContainer
-      containers:
-        stash: !type:ContainerSlot {}
   - uid: 21363
     components:
     - type: Transform
@@ -115091,7 +115105,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 61.5,-27.5
       parent: 60
-  - uid: 13193
+  - uid: 13194
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
@@ -120600,7 +120614,7 @@ entities:
     - type: Transform
       pos: 42.5,18.5
       parent: 60
-  - uid: 13195
+  - uid: 13196
     components:
     - type: Transform
       pos: 44.5,17.5
@@ -122640,7 +122654,7 @@ entities:
     - type: Transform
       pos: -33.5,-21.5
       parent: 60
-  - uid: 19408
+  - uid: 21187
     components:
     - type: Transform
       pos: 44.5,17.5
@@ -123863,7 +123877,7 @@ entities:
         21753:
         - On: Open
         - Off: Close
-        19408:
+        21187:
         - On: Open
         - Off: Close
         21758:
@@ -141916,7 +141930,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 57.5,16.5
       parent: 60
-  - uid: 13194
+  - uid: 13195
     components:
     - type: Transform
       pos: 46.5,17.5
