--- a/Resources/Prototypes/Roles/Jobs/Security/detective.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/detective.yml
@@ -28,6 +28,7 @@
 - type: startingGear
   id: DetectiveGear
   equipment:
+    shoes: ClothingShoesBootsJackFilled # GreyStation Addition
     eyes: ClothingEyesGlassesSecurity
     id: DetectivePDA
     ears: ClothingHeadsetSecurity
