--- a/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
@@ -38,6 +38,7 @@
 - type: startingGear
   id: HoSGear
   equipment:
+    shoes: ClothingShoesBootsJackFilled # GreyStation Addition
     eyes: ClothingEyesGlassesSecurity
     id: HoSPDA
     gloves: ClothingHandsGlovesCombat
