--- a/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
@@ -27,6 +27,7 @@
 - type: startingGear
   id: SecurityOfficerGear
   equipment:
+    shoes: ClothingShoesBootsJackFilled # GreyStation Addition
     neck: ClothingNeckSecurityOfficerBadge # GreyStation - Addition
     eyes: ClothingEyesGlassesSecurity
     ears: ClothingHeadsetSecurity
