--- a/Resources/Prototypes/Roles/Jobs/Security/warden.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/warden.yml
@@ -30,6 +30,7 @@
 - type: startingGear
   id: WardenGear
   equipment:
+    shoes: ClothingShoesBootsJackFilled # GreyStation Addition
     eyes: ClothingEyesGlassesSecurity
     id: WardenPDA
     ears: ClothingHeadsetSecurity
