--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
@@ -111,7 +111,7 @@
 
 - type: entity
   name: bluecherry muffin
-  parent: FoodMuffinBase
+  parent: FoodBakedBase
   id: FoodBakedMuffinBluecherry
   description: Blue cherries inside a delicious muffin.
   components:
