--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
@@ -654,6 +654,8 @@
     - type: Sprite
       sprite: Objects/Specific/Hydroponics/pyrotton.rsi
 
+- type: entity
+  parent: SeedBase
   id: RealCapfruitSeeds
   name: packet of capfruit seeds
   description: "Is it real, or is it fake?"
