--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -2584,7 +2584,8 @@
     flavors:
       - cherry
   - type: Food
-    trash: TrashCherryPit
+    trash:
+    - TrashCherryPit
   - type: SolutionContainerManager
     solutions:
       food:
