--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -3105,6 +3105,58 @@
     - VimPilot
 
 - type: entity
+  name: weasel
+  parent: [SimpleMobBase, StripableInventoryBase]
+  id: MobWeasel
+  description: Just a weaseley fella!
+  components:
+  - type: Sprite
+    drawdepth: Mobs
+    sprite: Mobs/Pets/weasel.rsi
+    layers:
+    - map: ["enum.DamageStateVisualLayers.Base"]
+      state: weasel
+  - type: Physics
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.25
+        density: 3
+        mask:
+        - MobMask
+        layer:
+        - MobLayer
+  - type: Inventory
+    speciesId: ferret #Same thing, right?
+    templateId: pet
+  - type: DamageStateVisuals
+    states:
+      Alive:
+        Base: weasel
+      Dead:
+        Base: weasel_dead
+  - type: Butcherable
+    spawned:
+    - id: FoodMeat
+      amount: 1
+  - type: InteractionPopup
+    successChance: 0.8
+    interactDelay: 1.5 # Avoids overlapping SFX due to spam - these SFX are a little longer than the typical 1 second.
+    interactSuccessString: petting-success-soft-floofy
+    interactFailureString: petting-failure-generic
+    interactSuccessSpawn: EffectHearts
+    interactSuccessSound:
+      path: /Audio/Animals/ferret_happy.ogg
+  - type: Grammar
+    attributes:
+      gender: epicene
+  - type: Tag
+    tags:
+    - VimPilot
+
+- type: entity
   name: hamster
   parent: [ SimpleMobBase, MobCombat, StripableInventoryBase]
   id: MobHamster
