--- a/Resources/Prototypes/GameRules/events.yml
+++ b/Resources/Prototypes/GameRules/events.yml
@@ -13,7 +13,7 @@
     - id: IonStorm # its calm like 90% of the time smh
     - id: KudzuGrowth
     - id: MassHallucinations
-    - id: MimicVendorRule
+    # - id: MimicVendorRule
     - id: MouseMigration
     - id: PowerGridCheck
     - id: SlimesSpawn
@@ -33,7 +33,6 @@
     - id: RevenantSpawn
     - id: SleeperAgents
     - id: ZombieOutbreak
-
 
 - type: entity
   id: BaseStationEvent
