--- a/Resources/Prototypes/Reagents/Consumable/Drink/soda.yml
+++ b/Resources/Prototypes/Reagents/Consumable/Drink/soda.yml
@@ -265,3 +265,12 @@
   physicalDesc: reagent-physical-desc-fizzy
   flavor: metallic
   color: "#66538F"
+  
+- type: reagent
+  id: KingSoda
+  name: reagent-name-kingsoda
+  parent: BaseSoda
+  desc: reagent-desc-kingsoda
+  physicalDesc: fizzy
+  flavor: kingsoda
+  color: "#9F3400"
