--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -3108,7 +3108,7 @@
   name: weasel
   parent: [SimpleMobBase, StripableInventoryBase]
   id: MobWeasel
-  description: Just a weaseley fella!
+  description: Just a weaselly fella!
   components:
   - type: Sprite
     drawdepth: Mobs
@@ -3129,7 +3129,7 @@
         layer:
         - MobLayer
   - type: Inventory
-    speciesId: ferret #Same thing, right?
+    speciesId: ferret # Same thing, right?
     templateId: pet
   - type: DamageStateVisuals
     states:
@@ -3143,7 +3143,7 @@
       amount: 1
   - type: InteractionPopup
     successChance: 0.8
-    interactDelay: 1.5 # Avoids overlapping SFX due to spam - these SFX are a little longer than the typical 1 second.
+    interactDelay: 1.5 
     interactSuccessString: petting-success-soft-floofy
     interactFailureString: petting-failure-generic
     interactSuccessSpawn: EffectHearts
