Remove Prison Guard Option + Remove Formal HOS clothes

--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -916,8 +916,8 @@
   - HeadofSecurityJumpskirt
   - HeadofSecurityTurtleneck
   - HeadofSecurityTurtleneckSkirt
-  - HeadofSecurityFormalSuit
-  - HeadofSecurityFormalSkirt
+  #- HeadofSecurityFormalSuit # GreyStation - Loadout removal
+  #- HeadofSecurityFormalSkirt # GreyStation - Loadout removal
 
 - type: loadoutGroup
   id: HeadofSecurityNeck
