adding brown scarf to salvage loadout

--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
@@ -45,3 +45,8 @@
   equipment:
     neck: ClothingNeckCloakMiner
 
+- type: loadout
+  id: BrownScarf
+  equipment:
+    neck: ClothingNeckScarfStripedBrown
+
