adding mantle and brown scarf to salvage loadout

--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -630,6 +630,8 @@
   name: loadout-group-salvage-specialist-neck
   loadouts:
   - MinerCloak
+  - Mantle
+  - BrownScarf
 
 - type: loadoutGroup
   id: SalvageSpecialistBackpack
