Allow recycler to shred clothing

--- a/Resources/Prototypes/Entities/Clothing/Masks/base_clothingmask.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/base_clothingmask.yml
@@ -39,6 +39,9 @@
     spawned:
     - id: MaterialCloth1
       amount: 1
+  - type: PhysicalComposition # 75% of amount cloth on buthering
+    materialComposition:
+      Cloth: 75
   - type: Food
     requiresSpecialDigestion: true
   - type: SolutionContainerManager
