--- a/Resources/Prototypes/Entities/Clothing/Hands/base_clothinghands.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/base_clothinghands.yml
@@ -38,6 +38,9 @@
     spawned:
     - id: MaterialCloth1
       amount: 1
+  - type: PhysicalComposition # 75% of amount cloth on buthering
+    materialComposition:
+      Cloth: 75
 
 # gloves that cover the fingertips and have synthetic fibers
 - type: entity
