--- a/Resources/Prototypes/Entities/Clothing/Neck/base_clothingneck.yml
+++ b/Resources/Prototypes/Entities/Clothing/Neck/base_clothingneck.yml
@@ -16,6 +16,9 @@
     spawned:
     - id: MaterialCloth1
       amount: 2
+  - type: PhysicalComposition # 75% of amount cloth on buthering
+    materialComposition:
+      Cloth: 150
   - type: Food
     requiresSpecialDigestion: true
   - type: SolutionContainerManager
