--- a/Resources/Prototypes/Entities/Clothing/Uniforms/base_clothinguniforms.yml
+++ b/Resources/Prototypes/Entities/Clothing/Uniforms/base_clothinguniforms.yml
@@ -14,6 +14,9 @@
     spawned:
     - id: MaterialCloth1
       amount: 3
+  - type: PhysicalComposition # 75% of amount cloth on buthering
+    materialComposition:
+      Cloth: 225
   - type: Food
     requiresSpecialDigestion: true
   - type: SolutionContainerManager
