--- a/Resources/Prototypes/Recipes/Lathes/devices.yml
+++ b/Resources/Prototypes/Recipes/Lathes/devices.yml
@@ -1,54 +1,33 @@
 - type: latheRecipe
+  parent: BasePartRecipe
   id: TimerTrigger
-  result: TimerTrigger
-  category: Parts
-  completetime: 2
-  materials:
-    Steel: 300
-    Plastic: 200
 
 - type: latheRecipe
+  parent: BasePartRecipe
   id: SignalTrigger
-  result: SignalTrigger
-  category: Parts
-  completetime: 2
-  materials:
-    Steel: 300
-    Plastic: 200
 
 - type: latheRecipe
+  parent: BasePartRecipe
   id: VoiceTrigger
-  result: VoiceTrigger
-  category: Parts
-  completetime: 2
-  materials:
-    Steel: 300
-    Plastic: 200
 
 - type: latheRecipe
+  parent: BasePartRecipe
   id: Igniter
-  result: Igniter
-  category: Parts
-  completetime: 2
   materials:
     Steel: 300
     Plastic: 100
     Glass: 100
 
 - type: latheRecipe
+  parent: BaseWeaponRecipe
   id: ChemicalPayload
-  result: ChemicalPayload
-  category: Weapons
-  completetime: 2
   materials:
     Steel: 200
     Plastic: 300
 
 - type: latheRecipe
+  parent: BaseWeaponRecipe
   id: FlashPayload
-  result: FlashPayload
-  category: Weapons
-  completetime: 2
   materials:
     Steel: 50
     Plastic: 100
@@ -57,7 +36,6 @@
 
 - type: latheRecipe
   id: ExplosivePayload
-  result: ExplosivePayload
   category: Weapons
   completetime: 4
   materials:
@@ -68,20 +46,18 @@
     Silver: 50
 
 - type: latheRecipe
+  parent: BasePartRecipe
   id: Signaller
   result: RemoteSignaller
-  category: Parts
-  completetime: 2
   materials:
     Steel: 100
     Plastic: 200
     Glass: 100
 
 - type: latheRecipe
+  parent: BasePartRecipe
   id: SignallerAdvanced
   result: RemoteSignallerAdvanced
-  category: Parts
-  completetime: 2
   materials:
     Steel: 100
     Plastic: 200
@@ -106,17 +82,14 @@
     Glass: 100
 
 - type: latheRecipe
+  parent: BaseToolRecipe
   id: AnomalyScanner
-  result: AnomalyScanner
-  category: Tools
-  completetime: 2
   materials:
     Plastic: 200
     Glass: 150
 
 - type: latheRecipe
   id: WeaponPistolCHIMP
-  result: WeaponPistolCHIMP
   category: Tools
   completetime: 5
   materials:
@@ -137,7 +110,6 @@
 
 - type: latheRecipe
   id: ClothingBackpackHolding
-  result: ClothingBackpackHolding
   completetime: 5
   materials:
     Steel: 2000
@@ -146,38 +118,19 @@
     Uranium: 150
 
 - type: latheRecipe
+  parent: ClothingBackpackHolding
   id: ClothingBackpackSatchelHolding
-  result: ClothingBackpackSatchelHolding
-  completetime: 5
-  materials:
-    Steel: 2000
-    Silver: 750
-    Plasma: 1500
-    Uranium: 150
 
 - type: latheRecipe
+  parent: ClothingBackpackHolding
   id: ClothingBackpackDuffelHolding
-  result: ClothingBackpackDuffelHolding
-  completetime: 5
-  materials:
-    Steel: 2000
-    Silver: 750
-    Plasma: 1500
-    Uranium: 150
 
 - type: latheRecipe
+  parent: ClothingBackpackHolding
   id: OreBagOfHolding
-  result: OreBagOfHolding
-  completetime: 5
-  materials:
-    Steel: 2000
-    Silver: 750
-    Plasma: 1500
-    Uranium: 150
 
 - type: latheRecipe
   id: ClothingMaskWeldingGas
-  result: ClothingMaskWeldingGas
   completetime: 3
   materials:
     Steel: 600
@@ -185,7 +138,6 @@
 
 - type: latheRecipe
   id: WeaponForceGun
-  result: WeaponForceGun
   category: Tools
   completetime: 5
   materials:
@@ -195,7 +147,6 @@
 
 - type: latheRecipe
   id: DeviceQuantumSpinInverter
-  result: DeviceQuantumSpinInverter
   completetime: 5
   materials:
     Steel: 700
@@ -204,7 +155,6 @@
 
 - type: latheRecipe
   id: WeaponProtoKineticAccelerator
-  result: WeaponProtoKineticAccelerator
   category: Weapons
   completetime: 5
   materials:
@@ -214,7 +164,6 @@
 
 - type: latheRecipe
   id: WeaponTetherGun
-  result: WeaponTetherGun
   category: Tools
   completetime: 5
   materials:
@@ -224,7 +173,6 @@
 
 - type: latheRecipe
   id: WeaponGrapplingGun
-  result: WeaponGrapplingGun
   category: Tools
   completetime: 5
   materials:
