--- a/Resources/Prototypes/Recipes/Lathes/medical.yml
+++ b/Resources/Prototypes/Recipes/Lathes/medical.yml
@@ -1,51 +1,31 @@
 - type: latheRecipe
+  parent: BaseToolRecipe
   id: Scalpel
-  result: Scalpel
-  category: Tools
-  completetime: 2
   materials:
     Steel: 200
 
 - type: latheRecipe
+  parent: Scalpel
   id: Retractor
-  result: Retractor
-  category: Tools
-  completetime: 2
-  materials:
-    Steel: 200
 
 - type: latheRecipe
+  parent: Scalpel
   id: Cautery
-  result: Cautery
-  category: Tools
-  completetime: 2
-  materials:
-    Steel: 200
 
 - type: latheRecipe
+  parent: BaseToolRecipe
   id: Drill
-  result: Drill
-  category: Tools
-  completetime: 2
   materials:
     Steel: 200
     Plastic: 100
 
 - type: latheRecipe
+  parent: Scalpel
   id: Saw
-  result: Saw
-  category: Tools
-  completetime: 2
-  materials:
-    Steel: 200
 
 - type: latheRecipe
+  parent: Scalpel
   id: Hemostat
-  result: Hemostat
-  category: Tools
-  completetime: 2
-  materials:
-    Steel: 200
 
 - type: latheRecipe
   id: BodyBag
@@ -88,14 +68,12 @@
 
 - type: latheRecipe
   id: ClothingHandsGlovesLatex
-  result: ClothingHandsGlovesLatex
   completetime: 2
   materials:
     Plastic: 300
 
 - type: latheRecipe
   id: ClothingHandsGlovesNitrile
-  result: ClothingHandsGlovesNitrile
   completetime: 2
   materials:
     Plastic: 100
@@ -103,14 +81,12 @@
 
 - type: latheRecipe
   id: ClothingMaskSterile
-  result: ClothingMaskSterile
   completetime: 2
   materials:
     Plastic: 50
 
 - type: latheRecipe
   id: DiseaseSwab
-  result: DiseaseSwab
   completetime: 1
   materials:
     Cloth: 20
@@ -118,7 +94,6 @@
 
 - type: latheRecipe
   id: Implanter
-  result: Implanter
   completetime: 1
   materials:
     Glass: 500
@@ -133,110 +108,75 @@
 
 - type: latheRecipe
   id: Medkit
-  result: Medkit
   name: lathe-recipe-Medkit-name
   completetime: 2
   materials:
     Plastic: 300
 
 - type: latheRecipe
+  parent: Medkit
   id: MedkitBurn
-  result: MedkitBurn
   name: lathe-recipe-MedkitBurn-name
-  completetime: 2
-  materials:
-    Plastic: 300
 
 - type: latheRecipe
+  parent: Medkit
   id: MedkitToxin
-  result: MedkitToxin
   name: lathe-recipe-MedkitToxin-name
-  completetime: 2
-  materials:
-    Plastic: 300
 
 - type: latheRecipe
+  parent: Medkit
   id: MedkitO2
-  result: MedkitO2
   name: lathe-recipe-MedkitO2-name
-  completetime: 2
-  materials:
-    Plastic: 300
 
 - type: latheRecipe
+  parent: Medkit
   id: MedkitBrute
-  result: MedkitBrute
   name: lathe-recipe-MedkitBrute-name
-  completetime: 2
-  materials:
-    Plastic: 300
 
 - type: latheRecipe
+  parent: Medkit
   id: MedkitAdvanced
-  result: MedkitAdvanced
   name: lathe-recipe-MedkitAdvanced-name
-  completetime: 2
-  materials:
-    Plastic: 300
 
 - type: latheRecipe
+  parent: Medkit
   id: MedkitRadiation
-  result: MedkitRadiation
   name: lathe-recipe-MedkitRadiation-name
-  completetime: 2
-  materials:
-    Plastic: 300
 
 - type: latheRecipe
+  parent: Medkit
   id: MedkitCombat
-  result: MedkitCombat
   name: lathe-recipe-MedkitCombat-name
-  completetime: 2
-  materials:
-    Plastic: 300
 
 - type: latheRecipe
+  parent: BaseToolRecipe
   id: HandLabeler
-  result: HandLabeler
-  category: Tools
-  completetime: 2
   materials:
     Plastic: 100
 
 - type: latheRecipe
   id: Jug
-  result: Jug
   completetime: 4
   materials:
     Plastic: 400
 
 - type: latheRecipe
   id: RollerBedSpawnFolded
-  result: RollerBedSpawnFolded
   completetime: 1
   materials:
     Steel: 600
     Plastic: 300
 
 - type: latheRecipe
+  parent: RollerBedSpawnFolded
   id: CheapRollerBedSpawnFolded
-  result: CheapRollerBedSpawnFolded
-  completetime: 1
-  materials:
-    Steel: 600
-    Plastic: 300
 
 - type: latheRecipe
+  parent: RollerBedSpawnFolded
   id: EmergencyRollerBedSpawnFolded
-  result: EmergencyRollerBedSpawnFolded
-  completetime: 1
-  materials:
-    Steel: 600
-    Plastic: 300
 
 - type: latheRecipe
   id: WhiteCane
-  result: WhiteCane
   completetime: 2
   materials:
     Steel: 100
