--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/food_produce.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/food_produce.yml
@@ -11,48 +11,6 @@
       - state: green
       - sprite: Objects/Specific/Hydroponics/onion_red.rsi
         state: produce
-  - type: RandomSpawner
-    prototypes:
-      - WheatBushel
-      - OatBushel
-      - Sugarcane
-      - Nettle
-      - FoodBanana
-      - FoodCarrot
-      - FoodCabbage
-      - FoodGarlic
-      - FoodLemon
-      - FoodLime
-      - FoodOrange
-      - FoodPineapple
-      - FoodPotato
-      - FoodTomato
-      - FoodEggplant
-      - FoodApple
-      - FoodCocoaPod
-      - FoodCorn
-      - FoodOnion
-      - FoodOnionRed
-      - FoodMushroom
-      - FoodChiliPepper
-      - FoodChillyPepper
-      - FoodAloe
-      - FoodPoppy
-      - FoodLingzhi
-      - FoodAmbrosiaVulgaris
-      - RiceBushel
-      - FoodSoybeans
-      - FoodKoibean
-      - FoodWatermelon
-      - FoodGrape
-      - FoodBerries
-      - FoodBungo
-      - FoodPeaPod
-      - FoodPumpkin
-      - CottonBol
-      - FoodCherry
-    chance: 0.8
-    offset: 0.0
   - type: EntityTableSpawner
     table: !type:NestedSelector
       tableId: ProduceTable
@@ -179,6 +137,9 @@
         amount: !type:RangeNumberSelector
           range: 1, 5
       - id: FoodCocoaBeans
+        amount: !type:RangeNumberSelector
+          range: 1, 5
+      - id: FoodCherry
         amount: !type:RangeNumberSelector
           range: 1, 5
     #rare
