created Syndizine, a syndicate alteration of Cognizine. this is my first ever commit so if i accidentially push to the main branch then oops :)

--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -877,6 +877,22 @@
           min: 5
 
 - type: reagent
+  id: Syndizine
+  name: reagent-name-syndizine
+  desc: reagent-desc-syndizine
+  group: Medicine
+  physicalDesc: reagent-physical-desc-enigmatic
+  flavor: magical
+  color: "#911d06"
+  metabolisms:
+    Medicine:
+      effects:
+      - !type:MakeSyndient
+        conditions:
+        - !type:ReagentThreshold
+          min: 5
+
+- type: reagent
   id: Ethyloxyephedrine
   name: reagent-name-ethyloxyephedrine
   desc: reagent-desc-ethyloxyephedrine
