--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -2607,10 +2607,19 @@
   - type: Tag
     tags:
     - Fruit
+  - type: FoodSequenceElement
+    sprite:
+      sprite: Objects/Specific/Hydroponics/cherry.rsi
+      state: produce
+    entries:
+      burger:
+        name: food-sequence-content-cherry
+      taco:
+        name: food-sequence-content-cherry
 
 - type: entity
   name: cherry pit
-  parent: BaseItem
+  parent: FoodInjectableBase
   id: TrashCherryPit
   components:
   - type: Sprite
@@ -2634,3 +2643,14 @@
     grindableSolutionName: food
   - type: Seed
     seedId: cherry
+  - type: SpaceGarbage
+  - type: BadFood
+  - type: FoodSequenceElement
+    sprite:
+      sprite: Objects/Specific/Hydroponics/cherry.rsi
+      state: pit
+    entries:
+      burger:
+        name: food-sequence-content-cherry-pit
+      taco:
+        name: food-sequence-content-cherry-pit
