--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -104,6 +104,7 @@
   abstract: true
   description: Handles AI interactions across holocards + AI cores
   components:
+  - type: ItemSlots
   - type: StationAiHolder
     slot:
       name: station-ai-mind-slot
